# microtrade_crypto_ia

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  implementation_plan.md  pyproject.toml
codex_docs/: AGENTS.md  CODING_STANDARDS.md  DEVELOPMENT_GUIDELINES.md  DIRECTORY_MAP.md  IMPLEMENTATION_PHASES.md  INITIAL_TASK_BREAKDOWN.md  PROJECT_RULES.md  REPOSITORY_BOOTSTRAP.md
config/: app.yaml  default.yaml
docker/: Dockerfile
docker/api/: Dockerfile
docker/clickhouse/config.d/: resources.xml
docker/clickhouse/init/: 001_schema.sql  01_init.sql
docker/clickhouse/users.d/: default-profile.xml
docker/redis/: redis.conf
docs/: 00_README.md  01_Production_Engineering_Specification.md  02_System_Contracts_Operational_Specs.md  03_Database_Schema_Specification.md  04_Redis_Streams_Topology.md  05_Replay_Engine_Specification.md  06_Modular_Monolith_Architecture.md  07_Local_Deployment_Blueprint.md  08_Implementation_Roadmap.md
prompts/: 00_MASTER_BOOTSTRAP_PROMPT.md  01_PHASE_1_INFRASTRUCTURE.md  02_PHASE_2_MARKET_DATA.md  03_PHASE_3_FEATURE_ENGINE.md  04_PHASE_4_ML_ENGINE.md  05_PHASE_5_RISK_ENGINE.md  06_PHASE_6_EXECUTION_ENGINE.md  07_PHASE_7_PAPER_TRADING.md  08_PHASE_8_REPLAY_ENGINE.md  09_PHASE_9_MONITORING.md  10_REVIEW_AND_REFACTOR_PROMPT.md  11_OPTIMIZATION_PROMPT.md  pos-fase.md
scripts/: health.ps1  run-api.ps1  soak_market_data.py  start.ps1  stop.ps1  test.ps1
src/: __init__.py
src/api/: __init__.py  main.py
src/core/: __init__.py  config.py  event_bus.py  events.py  health.py  logging.py  retry.py  streams.py
src/dashboard/: __init__.py
src/execution/: __init__.py
src/features/: __init__.py
src/market_data/: __init__.py  backpressure.py  binance_client.py  clock.py  engine.py  models.py  normalizers.py  orderbook.py
src/ml/: __init__.py
src/monitoring/: __init__.py
src/replay/: __init__.py
src/risk/: __init__.py
src/storage/: __init__.py  clickhouse.py  market_data_writer.py  redis_event_bus.py
tests/unit/: test_api_health.py  test_binance_client.py  test_config.py  test_events.py  test_logging.py  test_market_data_backpressure.py  test_market_data_config.py  test_market_data_engine.py  test_market_data_normalizers.py  test_orderbook_sync.py  test_redis_event_bus.py  test_retry.py
