[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microtrade-crypto-ia"
version = "0.1.0"
description = "Local-first modular monolith for crypto micro-trading research and execution."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
  "redis>=5.0,<6.0",
  "streamlit>=1.36,<2.0",
  "tenacity>=8.3,<9.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = [
  "api",
  "core",
  "dashboard",
  "execution",
  "features",
  "market_data",
  "ml",
  "monitoring",
  "replay",
  "risk",
  "storage",
]

