[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microtrade-crypto-ia"
version = "0.1.0"
description = "Local-first modular monolith for crypto micro-trading infrastructure."
requires-python = ">=3.11"
dependencies = [
  "clickhouse-connect>=0.7,<1.0",
  "fastapi>=0.110,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
  "redis>=5.0,<6.0",
  "uvicorn[standard]>=0.29,<1.0",
  "websockets>=12.0,<16.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "mypy>=1.10,<2.0",
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.4,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]
